fix(client): add null safety and robust validation to server edit and pinger mixins